--- a/index.html
+++ b/index.html
@@ -84,16 +84,15 @@
             Predict Alzheimer’s disease onset and progression by combining neuroimaging, omics,
             and clinical features with modern deep learning and probabilistic modeling.
           </p>
-          <a class="card-link" href="projects/tau_model/tau_transport.html">Open project →</a>
+          <a class="card-link" href="projects/disease-prediction.html">Open project →</a>
         </article>
 
         <article class="card">
-          <h4>Multi‑Omics Integration for Biomarker Discovery</h4>
+          <h4>AI Surrogate for Tau Transport Model</h4>
           <p>
-            Integrative models to discover robust biomarkers by aligning genomics, transcriptomics,
-            proteomics, and metabolomics across cohorts.
+            Design an effective AI surrogate to predict tau transport over the brain.
           </p>
-          <a class="card-link" href="projects/multi-omics-integration.html">Learn more →</a>
+          <a class="card-link" href="projects/tau_model/tau_transport.html">Learn more →</a>
         </article>
 
         <article class="card">
