--- a/index.html
+++ b/index.html
@@ -78,28 +78,27 @@
       </div>
       <div class="grid cards">
         <article class="card">
-          <div class="card-badge">Student-Led</div>
-          <h4>Disease Prediction with Multi‑Modal Data</h4>
+          <div class="card-badge">Undergraduate-Led</div>
+          <h4>Alzheimer's Disease Prediction with Multi‑Modal Data</h4>
           <p>
             Predict Alzheimer’s disease onset and progression by combining neuroimaging, omics,
-            and clinical features with modern deep learning and probabilistic modeling.
+            and clinical features with deep learning algorithms.
           </p>
           <a class="card-link" href="projects/disease-prediction.html">Open project →</a>
         </article>
 
         <article class="card">
-          <h4>AI Surrogate for Tau Transport Model</h4>
+          <h4>Brain Neural Operator for Tau Transport Model</h4>
           <p>
-            Design an effective AI surrogate to predict tau transport over the brain.
+            Predict tau transport over the brain using a new brain neural operator.
           </p>
           <a class="card-link" href="projects/tau_model/tau_transport.html">Learn more →</a>
         </article>
 
         <article class="card">
-          <h4>AI for Neuroimaging</h4>
+          <h4>AI Surrogate for Systems Biology Models</h4>
           <p>
-            Self‑supervised and contrastive methods for structural and functional brain imaging to
-            quantify neurodegeneration and cognitive decline risk.
+            Design generative AI surrogates to predict various dynamics of biological systems.
           </p>
           <a class="card-link" href="projects/ai-neuroimaging.html">Learn more →</a>
         </article>
