--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
         multi‑omics integration, foundation models for biomedical signals, and trustworthy AI for healthcare.
       </p>
       <ul class="pill-list">
-        <li>Alzheimer’s disease progression</li>
-        <li>Multi‑omics integration</li>
-        <li>Neuroimaging + clinical data</li>
-        <li>Trustworthy & reproducible ML</li>
+        <li>Deep Learning</li>
+        <li>AI Surrogate</li>
+        <li>Systems Biology</li>
+        <li>Neuroimaging + Multi-omics Data</li>
       </ul>
     </section>
 
