--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
   <section class="hero">
     <div class="container hero-inner">
       <div class="hero-text">
-        <h2>AI for Neuroscience & Precision Medicine</h2>
+        <h2>AI for Health & Biology</h2>
         <p>
-          We build machine learning systems to decode biological signals and advance
-          understanding of neurodegenerative diseases, with a focus on Alzheimer's disease.
+          We build deep learning systems to advance disease prediction and
+          understand various biological systems.
         </p>
         <div class="cta-row">
           <a class="button" href="#projects">Explore Projects</a>
