--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </div>
       <div class="hero-card">
         <div class="stat">
-          <span class="stat-number">3</span>
+          <span class="stat-number">4</span>
           <span class="stat-label">Active projects</span>
         </div>
         <div class="stat">
@@ -59,9 +59,9 @@
     <section id="research" class="section">
       <h3 class="section-title">Research Overview</h3>
       <p>
-        Our group develops robust machine learning and statistical methods to connect multi‑modal biomedical data
+        Our group develops robust machine learning and statistical methods to connect multi-modal biomedical data
         (omics, imaging, EHR) with clinical outcomes. Current directions include: disease trajectory modeling,
-        multi‑omics integration, foundation models for biomedical signals, and trustworthy AI for healthcare.
+        multi-omics integration, foundation models for biomedical signals, and trustworthy AI for healthcare.
       </p>
       <ul class="pill-list">
         <li>Deep Learning</li>
@@ -79,7 +79,7 @@
       <div class="grid cards">
         <article class="card">
           <div class="card-badge">Undergraduate-Led</div>
-          <h4>Alzheimer's Disease Prediction with Multi‑Modal Data</h4>
+          <h4>Alzheimer's Disease Prediction with Multi-Modal Data</h4>
           <p>
             Predict Alzheimer’s disease onset and progression by combining neuroimaging, omics,
             and clinical features with deep learning algorithms.
@@ -102,6 +102,16 @@
           </p>
           <a class="card-link" href="projects/ai-neuroimaging.html">Learn more →</a>
         </article>
+
+        <article class="card">
+          <div class="card-badge">New</div>
+          <h4>Generative Models for Protein Design</h4>
+          <p>
+            Explore how generative AI can design and optimize novel protein structures,
+            accelerating drug discovery and synthetic biology innovations.
+          </p>
+          <a class="card-link" href="projects/protein-design.html">Learn more →</a>
+        </article>
       </div>
     </section>
 
@@ -109,7 +119,7 @@
       <h3 class="section-title">Selected Publications</h3>
       <ol class="pub-list">
         <li>
-          Chen, M. et al. (2025). <em>Deep Learning for Multi‑Modal Alzheimer’s Disease Classification</em>.
+          Chen, M. et al. (2025). <em>Deep Learning for Multi-Modal Alzheimer’s Disease Classification</em>.
           <span class="pub-venue">Bioinformatics</span>.
         </li>
         <li>
@@ -131,7 +141,7 @@
     <section id="contact" class="section">
       <h3 class="section-title">Contact</h3>
       <p>
-        Department of Computer Science, Wake Forest University (Winston‑Salem, NC)<br>
+        Department of Computer Science, Wake Forest University (Winston-Salem, NC)<br>
         <a href="mailto:chenm19@wfu.edu">chenm19@wfu.edu</a><br>
         <a href="https://cs.wfu.edu/" target="_blank" rel="noopener">cs.wfu.edu</a>
       </p>
