--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             Predict Alzheimer’s disease onset and progression by combining neuroimaging, omics,
             and clinical features with deep learning algorithms.
           </p>
-          <a class="card-link" href="projects/disease-prediction.html">Open project →</a>
+          <a class="card-link" href="projects/AD-prediction.html">Open project →</a>
         </article>
 
         <article class="card">
