--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
       <h3 class="section-title">Teaching</h3>
       <!-- <ul class="2019-2025"> -->
         <ul class="people">
-        <li>CSC 111 Introduction to Computer Science <a class="button" href="teaching/teaching.html">View undergraduate-developed course projects</a>
+        <li>CSC 111 Introduction to Computer Science <a class="button" href="teaching/teaching.html">View undergraduate-developed games</a>
 </li>
         <li>CSC 201 Data Structure and Algorithms</li>
         <li>CSC 387/687 Computational Systems Biology</li>
