--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
         <article class="card">
           <h4>MAMBA Brain Fingerprinting</h4>
           <p>
-          Develop <strong>MAMBAxBrain</strong> framework to integrate Mamba with functional connectivity analysis for multi-task fMRI modeling, including brain fingerprinting, cognitive decoding, reaction-time prediction, and schizophrenia diagnosis. </p>
+          Develop <strong>MAMBAxBrain</strong> framework to integrate Mamba with functional connectivity analysis 
+            for multi-task fMRI modeling, including brain fingerprinting, cognitive decoding, reaction-time prediction, and schizophrenia diagnosis. </p>
           <a class="card-link" href="projects/ai-neuroimaging.html">Learn more →</a>
         </article>
 
@@ -185,7 +186,7 @@
       <h3 class="section-title">Teaching</h3>
       <!-- <ul class="2019-2025"> -->
         <ul class="people">
-        <li>CSC 111 Introduction to Computer Science <a class="button" href="teaching/teaching.html">View undergraduate-developed games</a>
+        <li>CSC 111 Introduction to Computer Science  <a class="button" href="teaching/teaching.html">(View undergraduate-developed games→)</a>
 </li>
         <li>CSC 201 Data Structure and Algorithms</li>
         <li>CSC 387/687 Computational Systems Biology</li>
