--- a/teaching/mementopuzzle/index.html
+++ b/teaching/mementopuzzle/index.html
@@ -1,1 +1,42 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Memento Puzzle</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
 
+<!-- buttons -->
+<ul>
+    <li><a href="./level1.html"><button type="button" class="block_one">Level One</button></a></li>
+</ul>
+
+<ul>
+    <li><a href="./level2.html"><button type="button" class="block_two">Level Two</button></a></li>
+</ul>
+
+<ul>
+    <li><a href="./level3.html"><button type="button" class="block_three">Level Three</button></a></li>
+</ul>
+
+
+<!-- cute glowing title -->
+<div id="container" class="title">
+    <p><a>
+        Memento Puzzle
+    </a></p>
+</div>
+
+<!-- game instruction & description -->
+<h2>In this game, please click on crystal balls next to the picture to flip the
+    <br><br>corresponding segments.
+    <br><br>Your goal is to eliminate all shadowed part.
+    <br><br>Good luck!</h2>
+
+<h4>author: Qingyue Lin, Yiting Chai
+    <br><br>2020/4/29</h4>
+
+
+</body>
+</html>
