--- a/index.html
+++ b/index.html
@@ -340,7 +340,8 @@
 
       const saved = localStorage.getItem('theme');
       const systemPrefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-      const initial = saved || (systemPrefersDark ? 'dark' : 'light');
+      //const initial = saved || (systemPrefersDark ? 'dark' : 'light');
+      const initial =  'dark';
       setTheme(initial);
 
       btn.addEventListener('click', () => {
