--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
         <!-- 2025 -->
         <li>
-          Chen, C., Xu, E., Yang, D., Yan, C., Wei, T., Chen, H., Wei, Y., & <strong>Chen, M.</strong> (2025).
+          Rahman M., Wang G., Zhou K., <strong>Chen, M.</strong>, Fan, Y. (2025).
           <em> Catastrophic Forgetting in KANs.</em>
           <span class="pub-venue">Proceedings of AAAI Conference on Artificial Intelligence</span>.
         </li>
