Wire AD Explorer build into site

--- a/projects/AD-prediction.html
+++ b/projects/AD-prediction.html
@@ -35,7 +35,15 @@
 
     <h2 class="section-title">Disease Prediction with Multi‑Modal Data</h2>
     <div class="content">
-      <p>This student‑led project focuses on predicting Alzheimer’s disease onset and progression using multi‑modal data: neuroimaging (MRI/PET), omics (genomics, transcriptomics), and clinical measurements. We will evaluate classical ML and deep learning approaches with rigorous validation.</p>
+      <p>
+        This student‑led project focuses on predicting Alzheimer’s disease onset and progression using multi‑modal data: neuroimaging (MRI/PET), omics (genomics, transcriptomics), and clinical measurements. We will evaluate classical ML and deep learning approaches with rigorous validation.
+      </p>
+
+      <p style="margin-top: 16px;">
+    ►   <a href="./ad-explorer/" style="color:#6495ff; font-weight:600;">
+          Launch the Interactive Alzheimer’s Biomarker Explorer →
+        </a>
+      </p>
     </div>
 
     <div class="meta-grid">
