--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     <section id="projects" class="section">
       <div class="section-head">
         <h3 class="section-title">Featured Projects</h3>
-        <a class="button" href="projects/disease-prediction.html">Self-Learning Tutorials →</a>
+        <a class="button" href="projects/ad-explorer/">Self-Learning Tutorials →</a>
       </div>
       <div class="grid cards">
         <article class="card">
