--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
       <div class="grid cards">
         <article class="card">
-          <div class="card-badge"  href="projects/disease-prediction.html">Undergraduate-Led</div>
+          <!-- <div class="card-badge"  href="projects/disease-prediction.html">Undergraduate-Led</div> -->
           <h4> Multi‑Modal Data Integration</h4>
           <p>
             Predict Alzheimer’s disease onset and progression by combining neuroimaging, omics,
@@ -118,7 +118,7 @@
           <h4>MAMBA Brain Fingerprinting</h4>
           <p>
           Develop <strong>MAMBAxBrain</strong> framework to integrate Mamba with functional connectivity analysis for multi-task fMRI modeling, including brain fingerprinting, cognitive decoding, reaction-time prediction, and schizophrenia diagnosis. </p>
-          <a class="card-link" href="projects/ai-neuroimaging.html">Learn more →</a>
+          <!-- <a class="card-link" href="projects/ai-neuroimaging.html">Learn more →</a> -->
         </article>
 
         <article class="card">
@@ -128,7 +128,7 @@
           These surrogates reduce computational cost while maintaining predictive accuracy 
           for pathway and regulatory network analysis. 
           </p>
-          <a class="card-link" href="projects/ai-neuroimaging.html">TBA →</a>
+          <!-- <a class="card-link" href="projects/ai-neuroimaging.html">TBA →</a> -->
         </article>
       </div>
     </section>
